--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1>Click and drag to rearrange routine</h1>
+			<div class="row"><h1>Click and drag to rearrange routine</h1></div>
 			<div class="row row-level-term-section">level-1 term-1 section c</div>
 			<div class="row row-session">july 2022</div>
 			<div class="routine-table"></div>
